Fix nav-bar flicker

--- a/CS326TeamH/ffs/static/css/flagged_items.css
+++ b/CS326TeamH/ffs/static/css/flagged_items.css
@@ -44,9 +44,6 @@ nav {
     float: left;
     width:  350px;
     height: 350px;
-    /* background-position: 50% 50%; */
-    /* background-repeat:   no-repeat; */
-    /* background-size:     cover; */
 }
 .pagination {
   margin-bottom: 15px;
@@ -161,7 +158,7 @@ input::-webkit-input-placeholder {
 h2, form {
   display: inline-block;
   vertical-align: middle;
-  padding: 20px;
+  /* padding: 20px; */
 
 }
 
